--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,6 +9,8 @@ sites:
     url: https://ghgit.thudep.com
   - name: Ghost Hunter fileserver
     url: https://ghfile.thudep.com:4433
+  - name: Ghost Hunter Leaderboard
+    url: https://ghosthunter.thudep.com/leaderboard
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
