--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,10 +11,12 @@ sites:
     url: https://ghfile.thudep.com:4433
   - name: Ghost Hunter Leaderboard
     url: https://ghosthunter.thudep.com/leaderboard
-  - name: C Language homepage
+  - name: C Language Contest homepage
     url: https://clang.thudep.com
   - name: Pastebin
     url: https://bin.thudep.com
+  - name: C Language Contest fileserver
+    url: https://cfile.thudep.com:6443
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
